WIP : added images

--- a/index.html
+++ b/index.html
@@ -12,6 +12,33 @@
     <input class="textbox" type="text" placeholder="Search" >
 
 </div>
-    
+     <div id="container">
+
+        <div id="row">
+            <div id="movieblock">
+                <img src="assets/antman.jpg" >
+                <div class="moviename">
+                    <strong>Antman</strong>
+                    <span>8.4</span>
+                </div>
+            </div>
+            <div id="movieblock">
+                <img src="assets/hulk.jpg" >
+                <div class="moviename">
+                    <strong>Hulk</strong>
+                    <span>8.1</span>
+                </div>
+                
+            </div>
+            <div id="movieblock">
+                <img src="assets/iron-man.jpg" >
+                <div class="moviename">
+                    <strong>Iron Man</strong>
+                    <span>8.9</span>
+                </div>
+            </div>
+        </div>
+
+     </div>
 </body>
 </html>
