--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movie List</title>
     <link rel="stylesheet" href="css/style.css">
+    
 </head>
 <body>
 <div class="navbar">
@@ -19,7 +20,7 @@
                 <img src="assets/antman.jpg" >
                 <div class="moviename">
                     <strong>Antman</strong>
-                    <span>8.4</span>
+                    <span class='ratings'>7</span>
                 </div>
                 <div class="movieDescription">
                     antaman  asfghhfgjgfssfjfjvdjffduyfvjhj   fjdfv vffjdv vfdv hjjfvj jvfdjffjhd asfghhfgjgfssfjfjvdjffduyfvjhj   fjdfv vffjdv vfdv hjjfvj jvfdjffjhd
@@ -30,7 +31,7 @@
                 <img src="assets/hulk.jpg" >
                 <div class="moviename">
                     <strong>Hulk</strong>
-                    <span>8.1</span>
+                    <span class='ratings' >7.9</span>
                 </div>
                 <div class="movieDescription">
                     antaman  asfghhfgjgfssfjfjvdjffduyfvjhj   fjdfv vffjdv vfdv hjjfvj jvfdjffjhd asfghhfgjgfssfjfjvdjffduyfvjhj   fjdfv vffjdv vfdv hjjfvj jvfdjffjhd
@@ -42,7 +43,7 @@
                 <img src="assets/iron-man.jpg" >
                 <div class="moviename">
                     <strong>Iron Man</strong>
-                    <span>8.9</span>
+                    <span class='ratings' >8.9</span>
                 </div>
                 <div class="movieDescription">
                     antaman  asfghhfgjgfssfjfjvdjffduyfvjhj   fjdfv vffjdv vfdv hjjfvj jvfdjffjhd asfghhfgjgfssfjfjvdjffduyfvjhj   fjdfv vffjdv vfdv hjjfvj jvfdjffjhd
@@ -54,4 +55,5 @@
 
      </div>
 </body>
+<script src='./js/script.js'></script>
 </html>
